# radmind

./: .dockerignore  .env  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  create_fake_data.py  docker-compose.yml  main.py  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: test.yml
src/admin/: __init__.py  config.py
src/api/: app.py  auth_context.py  auth_middleware.py  middleware.py
src/config/: settings.py
src/db/: __init__.py  alembic.ini  session.py
src/db/alembic/: env.py
src/db/alembic/versions/: 1b11d14b7c7f_empty_db.py  9463a4fd2839_add_rbac_system_with_userrole_and_.py  9463d117a84c_test.py  (+2 more)
src/db/dao/: report_dao.py  user_dao.py
src/db/models/: __init__.py  report.py  user.py
src/graphql/: schema.py
src/graphql/directives/: auth.py
src/graphql/resolvers/: __init__.py  mutation.py  query.py  report.py  user.py
src/graphql/types/: enums.py  scalars.py
src/services/: auth_service.py  permission_service.py  report_service.py  user_service.py
src/utils/: auth.py  exceptions.py  field_mapping.py  pagination.py  validators.py
tests/: conftest.py  test_report.py  test_users.py
tests/auth/: test_auth_rbac.py
tests/factories/: __init__.py  base.py  report_factories.py  user_factories.py
tests/organizations/: test_organization_mutations.py  test_organization_queries.py
tests/reports/: test_report_mutations.py  test_report_queries.py
tests/studies/: test_study_filtering.py  test_study_mutations.py  test_study_queries.py
tests/templates/: test_template_queries.py
tests/users/: test_users.py
